# mcp-content-styles

./: .gitignore  README.md  claude_desktop_config.json  output_samples.md  pyproject.toml
assets/: architecture.mmd  workflow.mmd
docs/: QUICKSTART.md
examples/: __init__.py  usage_example.py
examples/output_samples/: README.md  douyin_script.md  wechat_article.md  weibo_post.md  x_post.md  xiaohongshu_note.md  zhihu_article.md
src/mcp_content_styles/: __init__.py  main.py  skill_manager.py
src/mcp_content_styles/skills/: bluesky_post.md  csdn_article.md  devto_article.md  douyin_script.md  hackernews_post.md  juejin_article.md  medium_article.md  wechat_article.md  weibo_post.md  x_post.md  xiaohongshu_note.md  zhihu_article.md
tests/: __init__.py  test_mcp_tools.py  test_skill_manager.py
